--- a/main.css
+++ b/main.css
@@ -6,6 +6,25 @@
     padding: 10px;
 }
 
+body{
+    color: #FFFFFF;
+    
+}
+
+#container{
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-image: url("Images/versus-screen-vs-battle-background-vector.jpg");
+    background-size: cover; /* Ajuster la taille de l'image pour remplir complètement la fenêtre du navigateur */
+    background-position: center; /* Positionner l'image au centre */
+    background-repeat: no-repeat; /* Empêcher la répétition de l'image */
+}
+
+
 #loginBtn,
 #registerBtn {
     margin-left: 10px;
@@ -13,4 +32,39 @@
 
 .hidden {
     display: none;
+}
+
+.buttonform {
+    position: absolute;
+    top : 0;
+    bottom: 1;
+    right: 0;
+    margin-top: 10px;
+    margin-right: 5px;
+    padding: 5px;
+}
+
+#carte1{
+
+}
+
+#carte2{
+
+}
+
+#image1{
+    float: left;
+    margin-top: -10%;
+    margin-left: 0;
+    border-radius: 10%;
+    height: 800px;
+
+}
+
+#image2{
+    float: left;
+    margin-top: -10%;
+    margin-left: 0;
+    border-radius: 10%;
+    height: 800px;
 }
